force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/Additional_Fund_Purpose_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>To Map the Additional Funds Purpose with their category</description>
    <label>Additional Fund Purpose Mapping</label>
    <pluralLabel>Additional Funds Purpose Mapping</pluralLabel>
</CustomObject>