force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Semi-colon separated values for the purpose linked to the category (name)</description>
    <label>Purpose</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>