force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Purpose_Label__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Label__c</fullName>
    <label>Purpose Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>