force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Purpose_Name__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Name__c</fullName>
    <label>Purpose Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>