force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Sorting_Category__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Category__c</fullName>
    <label>Sorting Category</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>