force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <description>Sort the categories based on given order</description>
    <label>Sorting Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>