force-app/main/sf-lending/objects/Additional_Fund_Purpose_Mapping__mdt/fields/Sorting_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Purpose__c</fullName>
    <description>Sorting of Purposes within each category</description>
    <label>Sorting Purpose</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>